# Sensor_Fusion

./: Node1.cpp
sensor_fusion/: CMakeLists.txt  package.xml
sensor_fusion/include/platform_communicator/: communicator.h  platform_interface.h  ros_communicator.h  ros_communicator_impl.h
sensor_fusion/include/sensor_fusion/: Node1.h  Utility.h  average_position_calculator.h  clock.h  component_factory.h  console_logger.h  console_logger.hpp  constants.h  factory_init.h  fusion_implementation.h  fusion_node.h  get_file_extension.h  image_sensor.h  logger_base.h  logger_base.hpp  logger_stream_base.h  logger_stream_base.hpp  message_reader_factory.h  node_base.h  ros_factory.h  ros_logger.h  ros_logger.hpp  ros_logger_stream.h  ros_logger_stream.hpp  sensor_message_from_image_rosbag.h  sensor_message_from_lidar_rosbag.h  sensor_message_from_radar_rosbag.h  sensor_message_reader_interface.h  tracked_object.h  visualizer.h
sensor_fusion/launch/: start.launch
sensor_fusion/msg/: SensorMessage.msg  SensorMessageArray.msg
sensor_fusion/rviz/: Rviz.rviz
sensor_fusion/scripts/: generate_test_data.py
sensor_fusion/src/: message_reader_factory.cpp  node_base.cpp  sensor_message_from_image_rosbag.cpp  sensor_message_from_lidar_rosbag.cpp  sensor_message_from_radar_rosbag.cpp
sensor_fusion/test/: csvconverter_test.cpp  fusion_test.cpp  tracker_test.cpp
